--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1002,7 +1002,7 @@
 					<div class="single-product-items">
 						<div class="product-item-image">
 							<img class="img-fluid w-100"
-								th:src="@{'/getimage/'+${item.image}}" alt="" height="150px"
+								th:src="@{'/image/'+${item.image}}" alt="" height="150px"
 								width="95%">
 							<div class="product-discount-tag">
 
@@ -1092,7 +1092,7 @@
 					</div>
 					<br>
 					<div class="d-flex justify-content-end">
-				        <a th:href="@{/admin/saveCart}" class="btn btn-info btn-sm ml-auto" >Thanh toán</a>
+				        <a th:href="@{#}" class="btn btn-info btn-sm ml-auto" >Thanh toán</a>
 				    </div>
 	    		</form>
 
