--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -19,6 +19,7 @@
         </div>
         <div class="note-card">
             <h3>Danh sách quản lý</h3>
+             <a href="/logout">log out</a>
         </div>
 
         <div class="row">
