--- a/src/main/resources/templates/admin/thongKe.html
+++ b/src/main/resources/templates/admin/thongKe.html
@@ -32,11 +32,13 @@
 <form action="/admin/thongKe" method="post">
 	  <div class="form-group">
 	    <label for="startDate">Thời gian bắt đầu:</label>
-	    <input type="date" id="startDate" name="startDate" required>
+	    <input type="date" id="startDate" th:if="${startDate}" th:value="${startDate}" name="startDate" required>
+	    <input type="date" id="startDate" th:unless="${startDate}"  name="startDate" required>
 	  </div>
 	  <div class="form-group">
 	    <label for="endDate">Thời gian kết thúc:</label>
-	    <input type="date" id="endDate" name="endDate" required>
+	    <input type="date" id="endDate" th:if="${endDate}" th:value="${endDate}" name="endDate" required>
+	    <input type="date" id="endDate" th:unless="${endDate}"  name="endDate" required>
 	  </div>
 	  <button type="submit" class="btn btn-primary">Tìm kiếm</button>
 	</form>
@@ -58,7 +60,7 @@
                 <td th:text="${orderDetail.order.note}"></td>
                 <td th:text="${orderDetail.quantity}"></td>
                 <td th:text="${orderDetail.address}"></td>
-                <td th:text="${orderDetail.order.totalAmount}"></td>
+                <td th:text="${#numbers.formatDecimal(orderDetail.order.totalAmount, 0, 'COMMA', 0, 'POINT')}"></td>
             </tr>
         </tbody>
     </table>
