--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
 		<div class="row">
 			<div class="offset-4 col-4">
 				<!-- Thông báo -->
-<div class="alert alert-warning" th:text="${message}"></div>
+<div class="alert alert-warning" th:text="${Message}"></div>
 				<form th:action="@{/account/login}" method="post">
 					 <div class="card">
         <div class="card-header">
@@ -65,6 +65,7 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
 		crossorigin="anonymous"></script>
+		
 </body>
 
 </html>
