--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -21,7 +21,7 @@
 	<main class="container">
 		<section class=" col-8 offset-2">
 			<!-- Thông báo -->
-			
+			<div class="alert alert-warning" th:text="${Message}"></div>
 			<form action="" method="post">
 				<div class="card">
 					<div class="card-header">
@@ -54,27 +54,12 @@
 								</div>
 								<div class="form-group">
 									<label for="email">Email</label> <input type="text"
-										class="form-control" th:field="${user.email}" id="email"
+										class="form-control" th:field="${user.email}" id="email" name="email"
 										aria-describedby="EmailId" placeholder="Email"> 
 										 <div class="alert alert-warning" th:errors="${user.email}"></div>
 										<small id="EmailId" class="form-text text-muted">Email là bắt buộc!</small>
 								</div>
-								<div class="form-group">
-									 <div class="form-check">
-            							<label class="form-check-label">
-                							<input class="form-check-input" type="radio" name="isAdmin" th:value="true">
-                						Admin
-            							</label>
-        							</div>
-        							<div class="form-check">
-            							<label class="form-check-label">
-                							<input class="form-check-input" type="radio" name="isAdmin" th:value="false" checked>
-                						User
-           								</label>
-        							</div>
-								</div>
 							</div>
-
 						</div>
 						<div class="card-footer text-muted">
 							<button class="btn btn-success mb-0" formaction="sign-up">Sign Up</button>
